--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.16",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
+    "unocss": "^0.57.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
