--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.9.0",
     "@unocss/postcss": "^0.57.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "unocss": "^0.57.2",
