--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@unocss/postcss": "^0.57.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
     "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "unocss": "^0.57.2",
