--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@unocss/postcss": "^0.57.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.18.1",
     "sass": "^1.69.5",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "unocss": "^0.57.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
