--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.18.1",
+    "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "unocss": "^0.57.2",
