--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.2.2",
     "unocss": "^0.57.2",
     "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.8.5"
   }
 }
