chore: update links and remove unused files in Vue project
- Update the link to the VS Code plugin for Vue 3 and TypeScript
- Add a note about Type Support for .vue Imports in TS
- Add a note about enabling Take Over Mode in Volar
- Add a link to the official website of UnoCSS
- Update the link to the Vite and Vue logos
- Update the link to the official Vue + Vite starter
- Update the link to the Volar GitHub repository
- Remove the unused postcss.config.cjs file
- Add a missing semicolon in HelloWorld.vue
- Remove the unused uno.config.ts file

Signed-off-by: steve.tsao <steve.tsao@hlwtech.com.tw>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     ".eslintrc.cjs",
-    "vite.config.ts"
+    "vite.config.ts",
+    "postcss.config.cjs"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
