--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-prettier": "^4.0.2",
     "typescript": "^5.2.2",
     "unocss": "^0.57.2",
     "vite": "^4.4.5",
