chore: configure stylelint with prettier plugin and various rule sets
- Add a new file `.stylelintrc.js`
- Configure stylelint with prettier plugin and various rule sets in `.stylelintrc.js`
- Add `create-stylelint` package to `package.json` dependencies

Signed-off-by: steve.tsao <steve.tsao@hlwtech.com.tw>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src"
   },
   "dependencies": {
+    "create-stylelint": "0.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
