--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src"
+    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet ./src",
+    "lint": "npm run lint:script && npm run lint:style",
+    "lint:style": "stylelint --fix \"src/**/*.{css,scss}\""
   },
   "dependencies": {
     "create-stylelint": "0.3.0",
