--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "unocss": "^0.57.2",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-stylelint": "^5.2.0",
     "vue-tsc": "^1.8.5"
   }
 }
