--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
     "stylelint": "^15.11.0",
